--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -122,6 +122,7 @@
         >
       </p>
     </footer>
+
     <script src="src/index.js"></script>
   </body>
 </html>
