--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         >
         and
         <a
-          href="https://app.netlify.com/sites/joyful-pony-8843bf/deploys/6549259c0544ba2757443145"
+          href="https://kaleidoscopic-panda-f93829.netlify.app/"
           target="_blank"
           >hosted on Netlify</a
         >
